actualizacion de archivos

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon.png" />
   <script src="app.js" defer></script>
-  <title>Rutinas BJJ</title>
+  <title>Entrenamiento BJJ en Casa</title>
 </head>
 <body>
-  <header><h1>Rutinas BJJ en Casa</h1></header>
+  <header><h1>Entrenamiento BJJ en Casa</h1></header>
   <main>
     <select id="routineSelector">
       <option value="dia1">Día 1</option>
@@ -18,8 +18,9 @@
       <option value="dia3">Día 3</option>
       <option value="dia4">Día 4</option>
       <option value="dia5">Día 5</option>
+      <option value="random">Día Aleatorio</option>
     </select>
-    <ul id="routineList"></ul>
+    <div id="routineContent"></div>
   </main>
 </body>
 </html>
